[gd_scene load_steps=5 format=2]

[ext_resource path="res://GUI.gd" type="Script" id=1]
[ext_resource path="res://tile.png" type="Texture" id=2]
[ext_resource path="res://grid.png" type="Texture" id=3]
[ext_resource path="res://tile2.png" type="Texture" id=4]

[node name="GUI" type="CenterContainer"]
pause_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.54232
margin_top = 8.5321
margin_right = -3.5423
margin_bottom = 8.5321
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="."]
light_mask = 0
margin_left = 38.0
margin_top = 123.0
margin_right = 562.0
margin_bottom = 677.0

[node name="ColorRect" type="ColorRect" parent="Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 517.0
margin_bottom = 547.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 517.0
margin_bottom = 547.0
size_flags_horizontal = 0

[node name="Left" type="CenterContainer" parent="Panel/HBoxContainer"]
margin_right = 200.0
margin_bottom = 540.0
rect_min_size = Vector2( 200, 0 )

[node name="VBox" type="VBoxContainer" parent="Panel/HBoxContainer/Left"]
margin_left = 26.0
margin_top = 176.0
margin_right = 173.0
margin_bottom = 364.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="Panel/HBoxContainer/Left/VBox"]
margin_right = 147.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Housing Shortage"

[node name="Statistics" type="GridContainer" parent="Panel/HBoxContainer/Left/VBox"]
editor/display_folded = true
modulate = Color( 0, 0, 0, 1 )
margin_top = 34.0
margin_right = 147.0
margin_bottom = 108.0
custom_constants/vseparation = 6
custom_constants/hseparation = 10
columns = 2

[node name="_Level" type="Label" parent="Panel/HBoxContainer/Left/VBox/Statistics"]
margin_right = 101.0
margin_bottom = 14.0
text = "Berlin"

[node name="Level" type="Label" parent="Panel/HBoxContainer/Left/VBox/Statistics"]
margin_left = 111.0
margin_right = 147.0
margin_bottom = 14.0
text = "1870"

[node name="_Countdown" type="Label" parent="Panel/HBoxContainer/Left/VBox/Statistics"]
margin_top = 20.0
margin_right = 101.0
margin_bottom = 34.0
text = "Stunde"

[node name="Cuntdown" type="Label" parent="Panel/HBoxContainer/Left/VBox/Statistics"]
margin_left = 111.0
margin_top = 20.0
margin_right = 147.0
margin_bottom = 34.0
text = "00:00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_Lines" type="Label" parent="Panel/HBoxContainer/Left/VBox/Statistics"]
margin_top = 40.0
margin_right = 101.0
margin_bottom = 54.0
text = "Bewohner"

[node name="Lines" type="Label" parent="Panel/HBoxContainer/Left/VBox/Statistics"]
margin_left = 111.0
margin_top = 40.0
margin_right = 147.0
margin_bottom = 54.0
text = "0"

[node name="_Score" type="Label" parent="Panel/HBoxContainer/Left/VBox/Statistics"]
margin_top = 60.0
margin_right = 101.0
margin_bottom = 74.0
text = "Mieteinnahmen"

[node name="Score" type="Label" parent="Panel/HBoxContainer/Left/VBox/Statistics"]
margin_left = 111.0
margin_top = 60.0
margin_right = 147.0
margin_bottom = 74.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Panel/HBoxContainer/Left/VBox"]
visible = false
margin_top = 128.0
margin_right = 147.0
margin_bottom = 232.0

[node name="Next" type="GridContainer" parent="Panel/HBoxContainer/Left/VBox/CenterContainer"]
editor/display_folded = true
margin_left = 73.0
margin_top = 52.0
margin_right = 73.0
margin_bottom = 52.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 2

[node name="Cell" type="TextureRect" parent="Panel/HBoxContainer/Left/VBox/CenterContainer/Next"]
margin_right = 26.0
margin_bottom = 26.0
texture = ExtResource( 2 )

[node name="Cell2" type="TextureRect" parent="Panel/HBoxContainer/Left/VBox/CenterContainer/Next"]
margin_left = 26.0
margin_right = 52.0
margin_bottom = 26.0
texture = ExtResource( 2 )

[node name="Cell3" type="TextureRect" parent="Panel/HBoxContainer/Left/VBox/CenterContainer/Next"]
margin_top = 26.0
margin_right = 26.0
margin_bottom = 52.0
texture = ExtResource( 2 )

[node name="Cell4" type="TextureRect" parent="Panel/HBoxContainer/Left/VBox/CenterContainer/Next"]
margin_left = 26.0
margin_top = 26.0
margin_right = 52.0
margin_bottom = 52.0
texture = ExtResource( 2 )

[node name="Cell5" type="TextureRect" parent="Panel/HBoxContainer/Left/VBox/CenterContainer/Next"]
margin_top = 52.0
margin_right = 26.0
margin_bottom = 78.0
texture = ExtResource( 2 )

[node name="Cell6" type="TextureRect" parent="Panel/HBoxContainer/Left/VBox/CenterContainer/Next"]
margin_left = 26.0
margin_top = 52.0
margin_right = 52.0
margin_bottom = 78.0
texture = ExtResource( 2 )

[node name="Cell7" type="TextureRect" parent="Panel/HBoxContainer/Left/VBox/CenterContainer/Next"]
margin_top = 78.0
margin_right = 26.0
margin_bottom = 104.0
texture = ExtResource( 2 )

[node name="Cell8" type="TextureRect" parent="Panel/HBoxContainer/Left/VBox/CenterContainer/Next"]
margin_left = 26.0
margin_top = 78.0
margin_right = 52.0
margin_bottom = 104.0
texture = ExtResource( 2 )

[node name="NewGame" type="Button" parent="Panel/HBoxContainer/Left/VBox"]
margin_top = 128.0
margin_right = 147.0
margin_bottom = 148.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.498039, 0.498039, 0.498039, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "New Game"
flat = true

[node name="Pause" type="Button" parent="Panel/HBoxContainer/Left/VBox"]
visible = false
margin_top = 270.0
margin_right = 147.0
margin_bottom = 290.0
text = "Pause"

[node name="HBox" type="HBoxContainer" parent="Panel/HBoxContainer/Left/VBox"]
editor/display_folded = true
visible = false
margin_top = 310.0
margin_right = 147.0
margin_bottom = 326.0

[node name="Label" type="Label" parent="Panel/HBoxContainer/Left/VBox/HBox"]
visible = false
margin_top = 1.0
margin_right = 38.0
margin_bottom = 15.0
text = "Music"

[node name="Music" type="HSlider" parent="Panel/HBoxContainer/Left/VBox/HBox"]
visible = false
margin_left = 42.0
margin_right = 147.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = -24.0
max_value = 0.0
ticks_on_borders = true

[node name="HBox2" type="HBoxContainer" parent="Panel/HBoxContainer/Left/VBox"]
editor/display_folded = true
visible = false
margin_top = 310.0
margin_right = 147.0
margin_bottom = 326.0

[node name="Label" type="Label" parent="Panel/HBoxContainer/Left/VBox/HBox2"]
margin_top = 1.0
margin_right = 39.0
margin_bottom = 15.0
text = "Sound"

[node name="Sound" type="HSlider" parent="Panel/HBoxContainer/Left/VBox/HBox2"]
margin_left = 43.0
margin_right = 147.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = -24.0
max_value = 0.0

[node name="About" type="Button" parent="Panel/HBoxContainer/Left/VBox"]
margin_top = 168.0
margin_right = 147.0
margin_bottom = 188.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "About"
flat = true

[node name="Right" type="MarginContainer" parent="Panel/HBoxContainer"]
margin_left = 204.0
margin_right = 510.0
margin_bottom = 540.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="ColorRect" type="ColorRect" parent="Panel/HBoxContainer/Right"]
margin_left = 8.0
margin_top = 8.0
margin_right = 298.0
margin_bottom = 532.0

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/Right"]
margin_left = 8.0
margin_top = 8.0
margin_right = 298.0
margin_bottom = 532.0
texture = ExtResource( 3 )

[node name="Grid" type="GridContainer" parent="Panel/HBoxContainer/Right"]
margin_left = 8.0
margin_top = 8.0
margin_right = 298.0
margin_bottom = 532.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 10

[node name="Cell" type="TextureRect" parent="Panel/HBoxContainer/Right/Grid"]
margin_right = 26.0
margin_bottom = 26.0
texture = ExtResource( 4 )

[node name="Cell2" type="TextureRect" parent="Panel/HBoxContainer/Right/Grid"]
margin_left = 26.0
margin_right = 52.0
margin_bottom = 26.0
texture = ExtResource( 4 )

[node name="Cell3" type="TextureRect" parent="Panel/HBoxContainer/Right/Grid"]
margin_left = 52.0
margin_right = 78.0
margin_bottom = 26.0
texture = ExtResource( 4 )

[node name="Cell4" type="TextureRect" parent="Panel/HBoxContainer/Right/Grid"]
margin_left = 78.0
margin_right = 104.0
margin_bottom = 26.0
texture = ExtResource( 4 )

[node name="AboutBox" type="AcceptDialog" parent="."]
margin_left = 168.0
margin_top = 320.0
margin_right = 431.0
margin_bottom = 480.0
window_title = "Tetron"
dialog_text = "Space bar - Hard drop
Down arrow - Soft drop
Left arrow - move left
Right arrow - move right
Up arrow - rotate clockwise
Shift + Up arrow - rotate anti-clockwise
Page Up - increase level on each press"
[connection signal="button_down" from="Panel/HBoxContainer/Left/VBox/NewGame" to="." method="_on_NewGame_button_down"]
[connection signal="button_down" from="Panel/HBoxContainer/Left/VBox/Pause" to="." method="_on_Pause_button_down"]
[connection signal="value_changed" from="Panel/HBoxContainer/Left/VBox/HBox/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="Panel/HBoxContainer/Left/VBox/HBox2/Sound" to="." method="_on_Sound_value_changed"]
[connection signal="button_down" from="Panel/HBoxContainer/Left/VBox/About" to="." method="_on_About_button_down"]
[connection signal="popup_hide" from="AboutBox" to="." method="_on_AboutBox_popup_hide"]
